// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`arbitrary groups > group case 0 1`] = `
"@layer properties;
:root, :host {
  --color-sky-500: oklch(68.5% .169 237.323);
  --color-slate-500: oklch(55.4% .046 257.417);
  --color-slate-900: oklch(20.8% .042 265.755);
  --color-white: #fff;
  --spacing: .25rem;
  --container-xs: 20rem;
  --text-sm: .875rem;
  --text-sm--line-height: calc(1.25/.875);
  --font-weight-semibold: 600;
  --radius-lg: .5rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.mx-auto {
  margin-inline: auto;
}
.block {
  display: block;
}
.flex {
  display: flex;
}
.h-6 {
  height: calc(var(--spacing) * 6);
}
.w-6 {
  width: calc(var(--spacing) * 6);
}
.max-w-xs {
  max-width: var(--container-xs);
}
.items-center {
  align-items: center;
}
.space-y-3 {
  :where(& > :not(:last-child)) {
    --tw-space-y-reverse: 0;
    margin-block-start: calc(calc(var(--spacing) * 3) * var(--tw-space-y-reverse));
    margin-block-end: calc(calc(var(--spacing) * 3) * calc(1 - var(--tw-space-y-reverse)));
  }
}
.space-x-3 {
  :where(& > :not(:last-child)) {
    --tw-space-x-reverse: 0;
    margin-inline-start: calc(calc(var(--spacing) * 3) * var(--tw-space-x-reverse));
    margin-inline-end: calc(calc(var(--spacing) * 3) * calc(1 - var(--tw-space-x-reverse)));
  }
}
.rounded-lg {
  border-radius: var(--radius-lg);
}
.bg-white {
  background-color: var(--color-white);
}
.stroke-sky-500 {
  stroke: var(--color-sky-500);
}
.p-6 {
  padding: calc(var(--spacing) * 6);
}
.text-sm {
  font-size: var(--text-sm);
  line-height: var(--tw-leading, var(--text-sm--line-height));
}
.font-semibold {
  --tw-font-weight: var(--font-weight-semibold);
  font-weight: var(--font-weight-semibold);
}
.text-slate-500 {
  color: var(--color-slate-500);
}
.text-slate-900 {
  color: var(--color-slate-900);
}
.shadow-lg {
  --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, #0000001a), 0 4px 6px -4px var(--tw-shadow-color, #0000001a);
  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
}
.ring-1 {
  --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
}
.ring-slate-900\\/5 {
  --tw-ring-color: color-mix(in srgb, oklch(20.8% .042 265.755) 5%, transparent);
  @supports (color: color-mix(in lab, red, red)) {
    --tw-ring-color: color-mix(in oklab, var(--color-slate-900) 5%, transparent);
  }
}
.group-hover\\:stroke-white {
  &:is(:where(.group):hover *) {
    @media (hover: hover) {
      stroke: var(--color-white);
    }
  }
}
.group-hover\\:text-white {
  &:is(:where(.group):hover *) {
    @media (hover: hover) {
      color: var(--color-white);
    }
  }
}
.hover\\:bg-sky-500 {
  &:hover {
    @media (hover: hover) {
      background-color: var(--color-sky-500);
    }
  }
}
.hover\\:ring-sky-500 {
  &:hover {
    @media (hover: hover) {
      --tw-ring-color: var(--color-sky-500);
    }
  }
}
@property --tw-space-y-reverse {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@property --tw-space-x-reverse {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@property --tw-font-weight {
  syntax: "*";
  inherits: false;
}
@property --tw-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-shadow-color {
  syntax: "*";
  inherits: false;
}
@property --tw-shadow-alpha {
  syntax: "<percentage>";
  inherits: false;
  initial-value: 100%;
}
@property --tw-inset-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-inset-shadow-color {
  syntax: "*";
  inherits: false;
}
@property --tw-inset-shadow-alpha {
  syntax: "<percentage>";
  inherits: false;
  initial-value: 100%;
}
@property --tw-ring-color {
  syntax: "*";
  inherits: false;
}
@property --tw-ring-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-inset-ring-color {
  syntax: "*";
  inherits: false;
}
@property --tw-inset-ring-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-ring-inset {
  syntax: "*";
  inherits: false;
}
@property --tw-ring-offset-width {
  syntax: "<length>";
  inherits: false;
  initial-value: 0px;
}
@property --tw-ring-offset-color {
  syntax: "*";
  inherits: false;
  initial-value: #fff;
}
@property --tw-ring-offset-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-space-y-reverse: 0;
      --tw-space-x-reverse: 0;
      --tw-font-weight: initial;
      --tw-shadow: 0 0 #0000;
      --tw-shadow-color: initial;
      --tw-shadow-alpha: 100%;
      --tw-inset-shadow: 0 0 #0000;
      --tw-inset-shadow-color: initial;
      --tw-inset-shadow-alpha: 100%;
      --tw-ring-color: initial;
      --tw-ring-shadow: 0 0 #0000;
      --tw-inset-ring-color: initial;
      --tw-inset-ring-shadow: 0 0 #0000;
      --tw-ring-inset: initial;
      --tw-ring-offset-width: 0px;
      --tw-ring-offset-color: #fff;
      --tw-ring-offset-shadow: 0 0 #0000;
    }
  }
}"
`;

exports[`arbitrary groups > group case 1 1`] = `
"@layer properties;
:root, :host {
  --color-slate-100: oklch(96.8% .007 247.896);
  --color-slate-200: oklch(92.9% .013 255.508);
  --color-slate-500: oklch(55.4% .046 257.417);
  --color-gray-700: oklch(37.3% .034 259.733);
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.invisible {
  visibility: hidden;
}
.group-hover\\/edit\\:translate-x-0\\.5 {
  &:is(:where(.group\\/edit):hover *) {
    @media (hover: hover) {
      --tw-translate-x: calc(var(--spacing) * 0.5);
      translate: var(--tw-translate-x) var(--tw-translate-y);
    }
  }
}
.group-hover\\/edit\\:text-gray-700 {
  &:is(:where(.group\\/edit):hover *) {
    @media (hover: hover) {
      color: var(--color-gray-700);
    }
  }
}
.group-hover\\/edit\\:text-slate-500 {
  &:is(:where(.group\\/edit):hover *) {
    @media (hover: hover) {
      color: var(--color-slate-500);
    }
  }
}
.group-hover\\/item\\:visible {
  &:is(:where(.group\\/item):hover *) {
    @media (hover: hover) {
      visibility: visible;
    }
  }
}
.hover\\:bg-slate-100 {
  &:hover {
    @media (hover: hover) {
      background-color: var(--color-slate-100);
    }
  }
}
.hover\\:bg-slate-200 {
  &:hover {
    @media (hover: hover) {
      background-color: var(--color-slate-200);
    }
  }
}
@property --tw-translate-x {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@property --tw-translate-y {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@property --tw-translate-z {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-translate-x: 0;
      --tw-translate-y: 0;
      --tw-translate-z: 0;
    }
  }
}"
`;

exports[`arbitrary groups > group case 2 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.hidden {
  display: none;
}
.group-\\[\\.is-published\\]\\:block {
  &:is(:where(.group):is(.is-published) *) {
    display: block;
  }
}"
`;

exports[`arbitrary groups > group case 3 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.group-\\[\\:nth-of-type\\(3\\)_\\&\\]\\:block {
  &:is(:nth-of-type(3) :where(.group) *) {
    display: block;
  }
}"
`;

exports[`arbitrary groups > peer case 0 1`] = `
"@layer properties;
:root, :host {
  --color-pink-600: oklch(59.2% .249 .584);
  --color-slate-700: oklch(37.2% .044 257.287);
  --spacing: .25rem;
  --text-sm: .875rem;
  --text-sm--line-height: calc(1.25/.875);
  --font-weight-medium: 500;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.invisible {
  visibility: hidden;
}
.mt-2 {
  margin-top: calc(var(--spacing) * 2);
}
.block {
  display: block;
}
.text-sm {
  font-size: var(--text-sm);
  line-height: var(--tw-leading, var(--text-sm--line-height));
}
.font-medium {
  --tw-font-weight: var(--font-weight-medium);
  font-weight: var(--font-weight-medium);
}
.text-pink-600 {
  color: var(--color-pink-600);
}
.text-slate-700 {
  color: var(--color-slate-700);
}
.peer-invalid\\:visible {
  &:is(:where(.peer):invalid ~ *) {
    visibility: visible;
  }
}
@property --tw-font-weight {
  syntax: "*";
  inherits: false;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-font-weight: initial;
    }
  }
}"
`;

exports[`arbitrary groups > peer case 1 1`] = `
":root, :host {
  --color-sky-500: oklch(68.5% .169 237.323);
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.visible {
  visibility: visible;
}
.hidden {
  display: none;
}
.peer-checked\\/draft\\:block {
  &:is(:where(.peer\\/draft):checked ~ *) {
    display: block;
  }
}
.peer-checked\\/draft\\:text-sky-500 {
  &:is(:where(.peer\\/draft):checked ~ *) {
    color: var(--color-sky-500);
  }
}
.peer-checked\\/published\\:block {
  &:is(:where(.peer\\/published):checked ~ *) {
    display: block;
  }
}
.peer-checked\\/published\\:text-sky-500 {
  &:is(:where(.peer\\/published):checked ~ *) {
    color: var(--color-sky-500);
  }
}"
`;

exports[`arbitrary groups > peer case 2 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.hidden {
  display: none;
}
.peer-\\[\\.is-dirty\\]\\:peer-required\\:block {
  &:is(:where(.peer):is(.is-dirty) ~ *) {
    &:is(:where(.peer):required ~ *) {
      display: block;
    }
  }
}"
`;
